fixed z-index of nav buttons

--- a/styles/index.css
+++ b/styles/index.css
@@ -35,6 +35,7 @@ body {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   background-color: black;
+  z-index: 99;
 }
 
 .prev:hover, .next:hover {
